[package]
name = "tsp-aco-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }
lazy_static = "1.4.0"
petgraph = "0.6.3"
piston_window = "0.112.0"
plotters = "0.3.5"
plotters-piston = "0.3.0"
rand = { version = "0.8.5", features = ["alloc"] }
